--- a/week-06/day-3/src/main/resources/templates/sayHello.html
+++ b/week-06/day-3/src/main/resources/templates/sayHello.html
@@ -5,6 +5,6 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     </head>
     <body>
-        <p th:text=" ${name} "/>
+        <p th:text=" ${greeting} " th:style="  ${color} "/>
     </body>
 </html>
