update week-02, week-04, week-06 and week-07

--- a/week-06/day-4/loginFormStyleSheet.css
+++ b/week-06/day-4/loginFormStyleSheet.css
@@ -12,6 +12,12 @@ input[type=text], input[type=password] {
   box-sizing: border-box;
 }
 
+input[type=password] {
+  background: url(assets/65000.png) no-repeat;
+  background-size: 15px;
+  background-position: 95%;
+}
+
 h1 {
   font-family: 'Roboto', sans-serif;
   font-size: 25px;
