fix EmailController and email

--- a/week-07/day-3/src/main/resources/templates/useful.html
+++ b/week-07/day-3/src/main/resources/templates/useful.html
@@ -7,6 +7,6 @@
 <body>
   <a href="http://localhost:8080/useful">USEFUL</a>
   <a href="http://localhost:8080/useful/colored">COLORED</a>
-  <a href="http://localhost:8080/useful/email">EMAIL</a>
+  <a href="http://localhost:8080/useful/email?email=is@this.valid">EMAIL</a>
 </body>
 </html>
