--- a/week-07/day-3/src/main/resources/templates/useful.html
+++ b/week-07/day-3/src/main/resources/templates/useful.html
@@ -5,8 +5,10 @@
   <meta charset="utf-8"/>
 </head>
 <body>
-  <a href="http://localhost:8080/useful">USEFUL</a>
-  <a href="http://localhost:8080/useful/colored">COLORED</a>
-  <a href="http://localhost:8080/useful/email?email=is@this.valid">EMAIL</a>
+  <a href="http://localhost:8080/useful">USEFUL</a><br>
+  <a href="http://localhost:8080/useful/colored">COLORED</a><br>
+  <a href="http://localhost:8080/useful/email?email=is@this.valid">EMAIL</a><br>
+  <a href="http://localhost:8080/useful/encoder">ENCODER</a><br>
+  <a href="http://localhost:8080/useful/decoder">DECODER</a><br>
 </body>
 </html>
