--- a/week-07/day-4/src/main/resources/templates/index.html
+++ b/week-07/day-4/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
     <li><a th:href="@{/information}">Information</a></li>
   </ul>
   <img th:src="@{greenfoxImage.png}" />
-  <p> This is Mr. Fox. Currently living on pizza and lemonade. He knows 2 tricks.</p>
+  <p> This is <span th:text="${fox.getFoxName()}" />. Currently living on pizza and lemonade. He knows 2 tricks.</p>
   <h1> Known tricks </h1>
     <ul>
       <li>write HTML</li>
