--- a/week-07/day-4/src/main/resources/templates/index.html
+++ b/week-07/day-4/src/main/resources/templates/index.html
@@ -9,11 +9,12 @@
     <li><a th:href="@{/information}">Information</a></li>
   </ul>
   <img th:src="@{greenfoxImage.png}" />
-  <p> This is <span th:text="${fox.getFoxName()}" />. Currently living on pizza and lemonade. He knows 2 tricks.</p>
+  <p> This is <span th:text="${fox.getFoxName()}" />. Currently living on <span th:text="${fox.getFood()}" /> and <span th:text="${fox.getDrink()}" />. He knows <span th:text="${fox.listOfTricks.size()}" /> tricks.</p>
   <h1> Known tricks </h1>
-    <ul>
-      <li>write HTML</li>
-      <li>code in Java</li>
+    <p th:if="${fox.listOfTricks.size()==0}"> You know no tricks yet, go and learn some!<p/>
+
+  <ul th:unless="${fox.listOfTricks}" th:each="trick : ${fox.listOfTricks}">
+      <li th:text="${trick}"></li>
     </ul>
 </body>
 </html>
