--- a/week-07/day-4/src/main/resources/templates/index.html
+++ b/week-07/day-4/src/main/resources/templates/index.html
@@ -9,11 +9,11 @@
     <li><a th:href="@{/information}">Information</a></li>
   </ul>
   <img th:src="@{greenfoxImage.png}" />
-  <p> This is <span th:text="${fox.getFoxName()}" />. Currently living on <span th:text="${fox.getFood()}" /> and <span th:text="${fox.getDrink()}" />. He knows <span th:text="${fox.listOfTricks.size()}" /> tricks.</p>
+  <p> This is <span th:text="${fox.getFoxName()}" />. Currently living on <span th:text="${fox.getFood()}" /> and <span th:text="${fox.getDrink()}" />. He knows <span th:text="${fox.getListOfTricks().size()}" /> tricks.</p>
   <h1> Known tricks </h1>
-    <p th:if="${fox.listOfTricks.size()==0}"> You know no tricks yet, go and learn some!<p/>
+    <p th:if="${fox.getListOfTricks().size()==0}"> You know no tricks yet, go and learn some!<p/>
 
-  <ul th:unless="${fox.listOfTricks}" th:each="trick : ${fox.listOfTricks}">
+  <ul th:unless="${fox.getListOfTricks()}" th:each="trick : ${fox.getListOfTricks()}">
       <li th:text="${trick}"></li>
     </ul>
 </body>
