create Food, Drink classes and FoodService and DrinkService classes.

--- a/week-07/day-4/src/main/resources/templates/index.html
+++ b/week-07/day-4/src/main/resources/templates/index.html
@@ -7,6 +7,7 @@
 <body>
   <ul>
     <li><a th:href="@{/information}">Information</a></li>
+    <li><a th:href="@{/nutritionStore}">Nutrition Store</a></li>
   </ul>
   <img th:src="@{greenfoxImage.png}" />
   <p> This is <span th:text="${fox.getFoxName()}" />. Currently living on <span th:text="${fox.getFood()}" /> and <span th:text="${fox.getDrink()}" />. He knows <span th:text="${fox.getListOfTricks().size()}" /> tricks.</p>
