--- a/week-07/day-4/src/main/resources/templates/index.html
+++ b/week-07/day-4/src/main/resources/templates/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Thymeleaf Exercise #</title>
+  <title>Fox Club</title>
   <meta charset="utf-8"/>
 </head>
 <body>
   <ul>
     <li><a th:href="@{/information}">Information</a></li>
-    <li><a th:href="@{/nutritionStore}">Nutrition Store</a></li>
+    <li><a th:href="@{/nutritionStore(name=${fox.getFoxName()})}">Nutrition Store</a></li>
+    <li><a th:href="@{/tricks(name=${fox.getFoxName()})}">Trick Center</a></li>
   </ul>
   <img th:src="@{greenfoxImage.png}" />
-  <p> This is <span th:text="${fox.getFoxName()}" />. Currently living on <span th:text="${}" /> and <span th:text="${}" />. He knows <span th:text="${fox.getListOfTricks().size()}" /> tricks.</p>
+  <p> This is <span th:text="${fox.getFoxName()}" />. Currently living on <span th:text="${fox.getFood()}" /> and <span th:text="${fox.getDrink()}" />. He knows <span th:text="${fox.getListOfTricks().size()}" /> tricks.</p>
   <h1> Known tricks </h1>
     <p th:if="${fox.getListOfTricks().size()==0}"> You know no tricks yet, go and learn some!<p/>
 
