--- a/week-07/day-4/src/main/resources/templates/login.html
+++ b/week-07/day-4/src/main/resources/templates/login.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Thymeleaf Exercise #</title>
+  <title>Login</title>
   <meta charset="utf-8"/>
 </head>
 <body>
-<h1>Welcome to Programmer Fox Club!</h1>
-<p>Please provide a name, so you can associate it to your pet!</p>
+<h1>Welcome to the Fox Club!</h1>
+<p>Please provide a name, so you can associate it to your fox!</p>
 
 <form th:action="@{/login}" th:method="post">
   <p>Name: <input type="text" name="name"></p>
