--- a/week-08/day-2/mysqltodo/src/main/resources/templates/todolist.html
+++ b/week-08/day-2/mysqltodo/src/main/resources/templates/todolist.html
@@ -6,9 +6,24 @@
 </head>
 <body>
   <h1>Todos for today:</h1>
-    <ul>
-      <li th:each="todo : ${todos}"
-          th:text="${todo.getTitle()}"></li>
-    </ul>
+    <table>
+      <thead>
+      <tr>
+        <th>ID</th>
+        <th>ACTION</th>
+        <th>DONE</th>
+        <th>URGENT</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr th:each="todo : ${todos}">
+        <td th:text="${todo.getId()}"></td>
+        <td th:text="${todo.getTitle()}"></td>
+        <td th:text="${todo.isDone()}"></td>
+        <td th:text="${todo.isUrgent()}"></td>
+      </tr>
+
+      </tbody>
+    </table>
 </body>
 </html>
